translate home finish

--- a/src/views/user/layouts/header.ejs
+++ b/src/views/user/layouts/header.ejs
@@ -11,7 +11,7 @@
 							<span></span>
 						</div>
 				    </div>
-				    <a href="index.html"><img class="logo" src="/user/images/logo1.png" alt="" width="119" height="58"></a>
+				    <a href="/"><img class="logo" src="/user/images/logo1.png" alt="" width="119" height="58"></a>
 			    </div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse flex-parent" id="bs-example-navbar-collapse-1">
@@ -20,46 +20,38 @@
 							<a href="#page-top"></a>
 						</li>
 						<li>
-							<a href="/">Home</a>
+							<a href="/">Trang chủ</a>
 						</li>
 						<li class="dropdown first">
 							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
-							Category<i class="fa fa-angle-down" aria-hidden="true"></i>
+							Thể loại<i class="fa fa-angle-down" aria-hidden="true"></i>
 							</a>
 							<ul class="dropdown-menu level1">
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" >Category 1<i class="ion-ios-arrow-forward"></i></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" >Thể loại 1<i class="ion-ios-arrow-forward"></i></a>
 									<ul class="dropdown-menu level2">
-										<li><a href="/book?category=5">Category 1-1</a></li>
+										<li><a href="/book?category=5">Thể loại 1-1</a></li>
 										<li><a href="/book"><C></C>ategory 1-2</a></li>
 									</ul>
 								</li>			
-								<li><a href="movielist.html">Category 2</a></li>
-								<li><a href="moviesingle.html">Category 3</a></li>
-								<li class="it-last"><a href="seriessingle.html">Category 4</a></li>
+								<li><a href="movielist.html">Thể loại 2</a></li>
+								<li><a href="moviesingle.html">Thể loại 3</a></li>
+								<li class="it-last"><a href="seriessingle.html">Thể loại 4</a></li>
 							</ul>
 						</li>
 						<li>
-							<a href="#">Writer</a>
+							<a href="/writer">Người đóng góp</a>
 						</li>
 						<li>
-							<a href="#">Blog</a>
+							<a href="/blog">Blog</a>
 						</li>
-						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
-							About Us <i class="fa fa-angle-down" aria-hidden="true"></i>
-							</a>
-							<ul class="dropdown-menu level1">
-								<li><a href="userfavoritegrid.html">user favorite grid</a></li>
-								<li><a href="userfavoritelist.html">user favorite list</a></li>
-								<li><a href="userprofile.html">user profile</a></li>
-								<li class="it-last"><a href="userrate.html">user rate</a></li>
-							</ul>
+						<li>
+							<a href="/">Về chúng tôi</a>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav flex-child-menu menu-right">
-						<li class="loginLink"><a href="#">LOG In</a></li>
-						<li class="btn signupLink"><a href="#">sign up</a></li>
+						<li class="loginLink"><a href="#">Đăng nhập</a></li>
+						<li class="btn signupLink"><a href="#">Đăng kí</a></li>
 					</ul>
 				</div>
 			<!-- /.navbar-collapse -->
@@ -68,7 +60,7 @@
 	    <!-- top search form -->
 		<form action="" method="post" class="top-search">
 	    	<select>
-				<option value="united">category</option>
+				<option value="united">Thể loại</option>
 			</select>
 			<input type="text" placeholder="Tìm kiếm sách mà bạn cần">
 	    </form>
