--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div class="movie-items">
+        <!-- <div class="movie-items">
             <div class="container">
                 <div class="row ipad-width">
                     <div class="col-md-8">
@@ -280,7 +280,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
     <!--end of latest new v1 section-->
