--- a/src/public/user/css/style.css
+++ b/src/public/user/css/style.css
@@ -7043,7 +7043,7 @@ p.ceb-single {
   margin-right: 15px;
 }
 .overlay .login-content .social-btn-2 .tw {
-  background-color: #00b9ef;
+  background-color: #dd003f;
 }
 .slider {
   background: url('../images/uploads/background.jpg') no-repeat;
