--- a/src/views/user/layouts/login-form.ejs
+++ b/src/views/user/layouts/login-form.ejs
@@ -33,7 +33,7 @@
         	<p>Or via social</p>
             <div class="social-btn-2">
             	<a class="fb" href="#"><i class="ion-social-facebook"></i>Facebook</a>
-            	<a class="tw" href="#"><i class="ion-social-twitter"></i>twitter</a>
+            	<a class="tw" href="#"><i class="ion-social-googleplus"></i>Google</a>
             </div>
         </div>
     </div>
