--- a/src/views/user/error.ejs
+++ b/src/views/user/error.ejs
@@ -30,7 +30,7 @@
 <body>
 <!--preloading-->
 <div id="preloader">
-    <img class="logo" src="/user/images/logo1.png" alt="" width="119" height="58">
+    <img class="logo" src="/user/images/logo2.png" alt="" width="119" height="58">
     <div id="status">
         <span></span>
         <span></span>
@@ -121,8 +121,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="middle-content">
-				<a href="index.html"><img class="md-logo" src="/user/images/logo1.png" alt=""></a>
-				<img src="/user/images/uploads/err-img.png" alt="">
+				<a href="index.html"><img class="md-logo" src="/user/images/logo2.png" alt="" width="119" height="58"></a>
+				<img src="/user/images/uploads/404-error.png" alt="" width="50%" height="50%">
 				<h1>Page not found</h1>
 				<a href="/" class="redbtn">go home</a>
 			</div>
