--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="movie-items">
+        <div class="movie-items">
             <div class="container">
                 <div class="row ipad-width">
                     <div class="col-md-8">
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         
-                        <!-- <div class="title-hd">
+                        <div class="title-hd">
                             <h2>Sách trinh thám</h2>
                             <a href="/book" class="viewall">Xem tất cả <i class="ion-ios-arrow-right"></i></a>
                         </div>
@@ -256,9 +256,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     
-                    <!-- <div class="col-md-4">
+                    <div class="col-md-4">
                         <div class="sidebar">
                             <div class="ads">
                                 <img src="/user/images/uploads/ads1.png" alt="" width="336" height="296">
@@ -277,10 +277,10 @@
                                 <a href="/writer" class="btn">Xem tất cả<i class="ion-ios-arrow-right"></i></a>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
     </div>
     <!--end of latest new v1 section-->
