--- a/src/views/user/book-detail.ejs
+++ b/src/views/user/book-detail.ejs
@@ -87,7 +87,7 @@
                                     </div>
                                 </div>		
                             </div>
-                            <div class="movie-rate">
+                            <!-- <div class="movie-rate">
                                 <div class="rate">
                                     <i class="ion-android-star"></i>
                                     <p><span>8.1</span> /10<br>
@@ -106,15 +106,20 @@
                                     <i class="ion-ios-star"></i>
                                     <i class="ion-ios-star-outline"></i>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="movie-tabs">
                                 <div class="tabs">
                                     <ul class="tab-links tabs-mv">
-                                        <li class="active"><a href="#overview">Overview</a></li>
+                                        <!-- <li class="active"><a href="#overview">Overview</a></li>
                                         <li><a href="#reviews"> Reviews</a></li>
                                         <li><a href="#cast">  Cast & Crew </a></li>
                                         <li><a href="#media"> Media</a></li> 
-                                        <li><a href="#moviesrelated"> Related Movies</a></li>                        
+                                        <li><a href="#moviesrelated"> Related Movies</a></li>                         -->
+                                        <li class="active"><a href="#">Overview</a></li>
+                                        <li><a href="#"> Reviews</a></li>
+                                        <li><a href="#">  Cast & Crew </a></li>
+                                        <li><a href="#"> Media</a></li> 
+                                        <li><a href="#"> Related Movies</a></li>                        
                                     </ul>
                                     <div class="tab-content">
                                         <div id="overview" class="tab active">
@@ -202,7 +207,7 @@
                                                         <a href="#" class="time">See All 56 Reviews <i class="ion-ios-arrow-right"></i></a>
                                                     </div>
                                                     <!-- movie user review -->
-                                                    <div class="mv-user-review-item">
+                                                    <!-- <div class="mv-user-review-item">
                                                         <h3>Best Marvel movie in my opinion</h3>
                                                         <div class="no-star">
                                                             <i class="ion-android-star"></i>
@@ -220,9 +225,9 @@
                                                             17 December 2016 by <a href="#"> hawaiipierson</a>
                                                         </p>
                                                         <p>This is by far one of my favorite movies from the MCU. The introduction of new Characters both good and bad also makes the movie more exciting. giving the characters more of a back story can also help audiences relate more to different characters better, and it connects a bond between the audience and actors or characters. Having seen the movie three times does not bother me here as it is as thrilling and exciting every time I am watching it. In other words, the movie is by far better than previous movies (and I do love everything Marvel), the plotting is splendid (they really do out do themselves in each film, there are no problems watching it more than once.</p>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
-                                                <div class="col-md-4 col-xs-12 col-sm-12">
+                                                <!-- <div class="col-md-4 col-xs-12 col-sm-12">
                                                     <div class="sb-it">
                                                         <h6>Director: </h6>
                                                         <p><a href="#">Joss Whedon</a></p>
@@ -264,7 +269,7 @@
                                                     <div class="ads">
                                                         <img src="/user/images/uploads/ads1.png" alt="">
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                         <div id="reviews" class="tab review">
