update notifitcation alert

--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -40,6 +40,8 @@
     <%- include('layouts/header') %>
     <!-- END | Header -->
     
+    <%- include('layouts/notification') %> 
+    
     <div class="content">
         <div class="slider movie-items">
             <div class="container">
