--- a/src/views/user/layouts/head.ejs
+++ b/src/views/user/layouts/head.ejs
@@ -4,3 +4,4 @@
 <!-- CSS files -->
 <link rel="stylesheet" href="/user/css/plugins.css">
 <link rel="stylesheet" href="/user/css/style.css">
+<link rel="stylesheet" href="/user/css/custom-style.css">
