--- a/src/views/user/layouts/javascript.ejs
+++ b/src/views/user/layouts/javascript.ejs
@@ -2,3 +2,4 @@
 <script src="/user/js/plugins.js"></script>
 <script src="/user/js/plugins2.js"></script>
 <script src="/user/js/custom.js"></script>
+<script src="/user/js/custom-jquery.js"></script>
