--- a/src/public/user/css/custom-style.css
+++ b/src/public/user/css/custom-style.css
@@ -39,3 +39,11 @@
 .notification-container {
     text-align: center;
 }
+
+.short-text {
+    width: 180px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: white;
+}
