--- a/src/views/user/book-detail.ejs
+++ b/src/views/user/book-detail.ejs
@@ -61,12 +61,12 @@
                         <div class="movie-img sticky-sb">
                             <img src="/user/images/uploads/movie-single.jpg" alt="">
                             <div class="movie-btn">	
-                                <div class="btn-transform transform-vertical red">
+                                <!-- <div class="btn-transform transform-vertical red">
                                     <div><a href="#" class="item item-1 redbtn"> <i class="ion-play"></i> Watch Trailer</a></div>
                                     <div><a href="https://www.youtube.com/embed/o-0hcF97wy0" class="item item-2 redbtn fancybox-media hvr-grow"><i class="ion-play"></i></a></div>
-                                </div>
+                                </div> -->
                                 <div class="btn-transform transform-vertical">
-                                    <div><a href="#" class="item item-1 yellowbtn"> <i class="ion-card"></i> Buy ticket</a></div>
+                                    <div><a href="#" class="item item-1 yellowbtn"> <i class="ion-card"></i> Buy</a></div>
                                     <div><a href="#" class="item item-2 yellowbtn"><i class="ion-card"></i></a></div>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                                         <li><a href="#"> Reviews</a></li>
                                         <li><a href="#">  Cast & Crew </a></li>
                                         <li><a href="#"> Media</a></li> 
-                                        <li><a href="#"> Related Movies</a></li>                        
+                                        <li><a href="#"> Related Books</a></li>                        
                                     </ul>
                                     <div class="tab-content">
                                         <div id="overview" class="tab active">
@@ -127,8 +127,8 @@
                                                 <div class="col-md-8 col-sm-12 col-xs-12">
                                                     <p>Tony Stark creates the Ultron Program to protect the world, but when the peacekeeping program becomes hostile, The Avengers go into action to try and defeat a virtually impossible enemy together. Earth's mightiest heroes must come together once again to protect the world from global extinction.</p>
                                                     <div class="title-hd-sm">
-                                                        <h4>Videos & Photos</h4>
-                                                        <a href="#" class="time">All 5 Videos & 245 Photos <i class="ion-ios-arrow-right"></i></a>
+                                                        <h4>Photos</h4>
+                                                        <a href="#" class="time">All 245 Photos <i class="ion-ios-arrow-right"></i></a>
                                                     </div>
                                                     <div class="mvsingle-item ov-item">
                                                         <a class="img-lightbox"  data-fancybox-group="gallery" href="/user/images/uploads/image11.jpg" ><img src="/user/images/uploads/image1.jpg" alt=""></a>
