--- a/src/views/user/book-list.ejs
+++ b/src/views/user/book-list.ejs
@@ -46,10 +46,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="hero-ct">
-                            <h1> movie listing - grid</h1>
+                            <h1> book listing - grid</h1>
                             <ul class="breadcumb">
                                 <li class="active"><a href="#">Home</a></li>
-                                <li> <span class="ion-ios-arrow-right"></span> movie listing</li>
+                                <li> <span class="ion-ios-arrow-right"></span> book listing</li>
                             </ul>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="row ipad-width">
                     <div class="col-md-8 col-sm-12 col-xs-12">
                         <div class="topbar-filter">
-                            <p>Found <span>1,608 movies</span> in total</p>
+                            <p>Found <span>1,608 books</span> in total</p>
                             <label>Sort by:</label>
                             <select>
                                 <option value="popularity">Popularity Descending</option>
@@ -281,10 +281,10 @@
                                 </div>
                         </div>		
                         <div class="topbar-filter">
-                            <label>Movies per page:</label>
+                            <label>Books per page:</label>
                             <select>
-                                <option value="range">20 Movies</option>
-                                <option value="saab">10 Movies</option>
+                                <option value="range">20 Books</option>
+                                <option value="saab">10 Books</option>
                             </select>
                             
                             <div class="pagination2">
@@ -302,11 +302,11 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="sidebar">
                             <div class="searh-form">
-                                <h4 class="sb-title">Search for movie</h4>
+                                <h4 class="sb-title">Search for book</h4>
                                 <form class="form-style-1" action="#">
                                     <div class="row">
                                         <div class="col-md-12 form-it">
-                                            <label>Movie name</label>
+                                            <label>Book name</label>
                                             <input type="text" placeholder="Enter keywords">
                                         </div>
                                         <div class="col-md-12 form-it">
