--- a/src/views/user/book-list.ejs
+++ b/src/views/user/book-list.ejs
@@ -360,7 +360,7 @@
                                 <h4 class="sb-title">Find us on Facebook</h4>
                                 <iframe src="" data-src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhaintheme%2F%3Ffref%3Dts&tabs=timeline&width=340&height=315px&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=true&appId"  height="315" style="width:100%;border:none;overflow:hidden" ></iframe>
                             </div>
-                            <div class="sb-twitter sb-it">
+                            <!-- <div class="sb-twitter sb-it">
                                 <h4 class="sb-title">Tweet to us</h4>
                                 <div class="slick-tw">
                                     <div class="tweet item" id="599202861751410688">
@@ -368,7 +368,7 @@
                                     <div class="tweet item" id="297462728598122498">
                                     </div>
                                 </div>					
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
